@@ -29,7 +29,7 @@
 package org.apache.tez.dag.app;
 
 import com.google.common.collect.Sets;
-import org.apache.tez.dag.api.TaskCommunicator;
+import org.apache.tez.serviceplugins.api.TaskCommunicator;
 import org.junit.Test;
 
 public class TestTaskCommunicatorWrapper {
